--- a/src/helper/profileCard.css
+++ b/src/helper/profileCard.css
@@ -157,7 +157,7 @@
     background-position: var(--pointer-x) var(--pointer-y), center, calc(var(--pointer-x) * 0.01) calc(var(--pointer-y) * 0.01);
     background-blend-mode: color-dodge;
     filter: brightness(calc(2 - var(--pointer-from-center))) contrast(calc(var(--pointer-from-center) + 2)) saturate(calc(0.5 + var(--pointer-from-center)));
-    mix-blend-mode: luminosity;
+    /* mix-blend-mode: luminosity; */
   }
   
   .pc-shine::after {
@@ -188,6 +188,7 @@
     transform: translateX(-50%) scale(1);
     bottom: 2px;
     opacity: calc(1.75 - var(--pointer-from-center));
+    mix-blend-mode: normal !important;
   }
   
   .pc-avatar-content::before {
@@ -232,7 +233,7 @@
     height: 48px;
     border-radius: 50%;
     overflow: hidden;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid rgb(255, 255, 255);
     flex-shrink: 0;
   }
   
@@ -288,7 +289,10 @@
     position: relative;
     transform: translate3d(calc(var(--pointer-from-left) * -6px + 3px), calc(var(--pointer-from-top) * -6px + 3px), 0.1px) !important;
     z-index: 5;
-    mix-blend-mode: luminosity;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: white;
+    /* mix-blend-mode: normal !important; */
+    /* mix-blend-mode: luminosity; */
   }
   
   .pc-details {
@@ -304,7 +308,7 @@
     margin: 0;
     font-size: min(5svh, 3em);
     margin: 0;
-    background-image: linear-gradient(to bottom, #fff, #6f6fbe);
+    background-image: linear-gradient(to bottom, #000000, #000000);
     background-size: 1em 1.5em;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -319,7 +323,7 @@
     font-size: 16px;
     margin: 0 auto;
     width: min-content;
-    background-image: linear-gradient(to bottom, #fff, #4a4ac0);
+    background-image: linear-gradient(to bottom, #000000, #000000);
     background-size: 1em 1.5em;
     -webkit-text-fill-color: transparent;
     background-clip: text;
