got done with about section

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ html, body, #root {
   margin: 0;
   padding: 0;
 }
+#about {
+  scroll-margin-top: 20px !important;
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
