--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -16,8 +16,12 @@
     border-radius: 2.5rem;
     box-shadow: 0 1px 20px 0 rgba(243, 242, 242, 0.363);
     backdrop-filter: blur(4px);
+    /* scroll-margin-bottom: 50px !important; */
   }
-  
+
+ /* #about {
+    scroll-margin-top: 100px;
+ } */
   .navbar-left {
     display: flex;
     align-items: center;
