--- a/src/Contact.css
+++ b/src/Contact.css
@@ -15,3 +15,33 @@
   /* .github-pill:hover {
     background: rgba(80, 80, 80, 0);
   } */
+
+  .contact-icon-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    width: 100%;
+    z-index: 1;
+    margin-top: 50px;
+  }
+  .contact-text-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 2; 
+    color: #fff; 
+    margin-top: 10px; 
+    /* margin-bottom: 10px; */
+    cursor: default;
+  }
+  .contact-icon-container p {
+    font-size: 1.2rem;
+    color: #fff;
+  }
